# ChangeLog for net-misc/knetload
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/knetload/Attic/ChangeLog,v 1.22 2005/04/23 02:05:36 flameeyes Exp $

  23 Apr 2005; Diego Pettenò <flameeyes@gentoo.org> knetload-2.3.ebuild:
  Changed HOMEPAGE and SRC_URI as my old provider just died and those urls are
  no more reachable.

*knetload-3.0_alpha2 (22 Apr 2005)

  22 Apr 2005; Diego Pettenò <flameeyes@gentoo.org> metadata.xml,
  +knetload-3.0_alpha2.ebuild:
  New upstream version, package.masked as it's still alpha-quality. I'm taking
  over the maintainership of this package as I'm current upstream maintainer.
  The new version depends on libksnmp to support remote network load
  monitoring.

  23 Oct 2004; Jason Wever <weeve@gentoo.org> knetload-2.3.ebuild:
  Stable on sparc.

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org> knetload-2.2.2.ebuild,
  knetload-2.3.ebuild:
  stable on amd64.

  12 Oct 2004; Carsten Lohrke <carlo@gentoo.org> knetload-2.3.ebuild:
  stable on x86

*knetload-2.3 (31 Jul 2004)

  31 Jul 2004; Carsten Lohrke <carlo@gentoo.org> +knetload-2.3.ebuild:
  version bump

  28 Jun 2004; Carsten Lohrke <carlo@gentoo.org> -knetload-1.94.ebuild,
  knetload-1.99.ebuild, knetload-2.2.2.ebuild:
  remove old ebuild, QA: IUSE, need-kde

  21 Jun 2004; Michael Hanselmann <hansmi@gentoo.org> knetload-2.2.2.ebuild:
  Added to ~ppc, bug 54667.

  22 May 2004; Danny van Dyk <kugelfang@gentoo.org> knetload-1.99.ebuild:
  Marked stable on amd64.

*knetload-2.2.2 (13 May 2004)

  13 May 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  +knetload-2.2.2.ebuild:
  Version bump as per bug #49686. Thanks to the current maintainer/author Diego
  Petteno for the notification

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> knetload-1.94.ebuild,
  knetload-1.99.ebuild:
  inherit kde instead of deprecated kde-base
