@@ -1,6 +1,6 @@
-MD5 4a33d8de59e5c5ecc0098147c35d5abb ChangeLog 3206
+MD5 84063bbf2e5f598e8e0f53073c648dd8 ChangeLog 3338
 MD5 64e213d0db015eb97e16b31ec6e748c3 metadata.xml 254
-MD5 fb569c275e5ded78f9deeda436876d41 knetload-3.0_alpha2.ebuild 735
+MD5 15a4697346619d7a36f5a1f070d575fa knetload-3.0_alpha2.ebuild 770
 MD5 42dbc9370b5644dad6c4e7f5e420dac0 knetload-2.3.ebuild 484
 MD5 fcd58fb6225a7442b0149f0fbb921970 files/digest-knetload-2.3 65
 MD5 bd89b61f8ce47d33f95143bdfbce4738 files/digest-knetload-3.0_alpha2 68
